--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
                         </a>
                     </section>
                     <partial name="_LoginPartial" />
-                    <feature name="Chat">
-                        <partial name="_ChatPartial" />
-                    </feature>
+                    //<feature name="Chat">
+                    //    <partial name="_ChatPartial" />
+                    //</feature>
                 </article>
             </div>
         </header>
